--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -126,17 +126,29 @@
                 </div>
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="menuzord-menu pull-right light" role="navigation">
-                        <li class=" dropdown">
-                            <a target="_self" href="{{ path('app_login') }}">
-                                <span>Login</span>
-                            </a>
-                        </li>
-                        <li class=" dropdown">
-                            <a target="_self" href="{{ path('app_register') }}" class="btn bn-lg gradient secondary btn-block waves-effect waves-light btn-register">
-                                <span>Sign Up</span>
-                            </a>
-
-                        </li>
+                        {% if app.user %}
+                            <li class=" dropdown">
+                                <a target="_self" href="{{ path('app_login') }}">
+                                    <span>Account</span>
+                                </a>
+                            </li>
+                            <li class=" dropdown">
+                                <a target="_self" href="{{ path('app_logout') }}" class="btn bn-lg gradient secondary btn-block waves-effect waves-light btn-register">
+                                    <span>Logout</span>
+                                </a>
+                            </li>
+                        {% else %}
+                            <li class=" dropdown">
+                                <a target="_self" href="{{ path('app_login') }}">
+                                    <span>Login</span>
+                                </a>
+                            </li>
+                            <li class=" dropdown">
+                                <a target="_self" href="{{ path('app_register') }}" class="btn bn-lg gradient secondary btn-block waves-effect waves-light btn-register">
+                                    <span>Sign Up</span>
+                                </a>
+                            </li>
+                        {% endif %}
                     </ul>
                     <ul class="menuzord-menu pull-right light" role="navigation">
                         <li class="active dropdown">
