--- a/templates/auth/login.html.twig
+++ b/templates/auth/login.html.twig
@@ -3,6 +3,17 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
+<!-- Page Header-->
+        <section class="page-title page-title-bg fixed-bg overlay dark-5 padding-top-160 padding-bottom-80">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2 class="white-text">Login</h2>
+                        <span class="white-text">Welcome on board</span>
+                    </div>
+                </div>
+            </div>
+        </section>
     <!-- Page Content-->
     <section class="section-padding gray-bg log-section">
         <div class="container">
