--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -128,7 +128,7 @@
                     <ul class="menuzord-menu pull-right light" role="navigation">
                         {% if app.user %}
                             <li class=" dropdown">
-                                <a target="_self" href="{{ path('app_login') }}">
+                                <a target="_self" href="{{ path('app_account_edit') }}">
                                     <span>Account</span>
                                 </a>
                             </li>
